--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+chaos (0.1.1) RELEASE; urgency=low
+
+  * Suppress already seen arguments from default configuration
+
+ -- Nick Douma <n.douma@nekoconeko.nl>  Fri, 02 May 2014 17:05:58 +0200
+
 chaos (0.1) RELEASE; urgency=low
 
   * Initial release
