--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+chaos (0.2.1) RELEASE; urgency=medium
+
+  * Remove gdbm setup.py requirement.
+  * Update setup.py in preparation of release on PyPi
+  * Bump version, update changelog
+
+ -- Nick Douma <n.douma@nekoconeko.nl>  Sat, 01 Nov 2014 13:37:00 +0100
+
 chaos (0.2) RELEASE; urgency=low
 
   Added SimpleCli, SimpleDb and AMQP helper classes
