--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+chaos (0.2.4) RELEASE; urgency=medium
+
+  Update build metadata and add Ubuntu Xenial support.
+
+  * Fix upload_to_ppa build target
+  * Add upload_to_pypi build target
+  * Add download_url to setup.py
+  * Add support for Ubuntu Xenial
+  * Fix spelling error in changelog
+  * Bump version, update changelog
+
+ -- Nick Douma <n.douma@nekoconeko.nl>  Mon, 27 Jun 2016 13:06:44 +0200
+
 chaos (0.2.3) RELEASE; urgency=medium
 
   Fix compatibility with recent versions of Pika (>= 0.10)
