--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+chaos (0.2.5) RELEASE; urgency=medium
+
+  Update supported Ubuntu versions.
+
+  * Drop Ubuntu Precise support, add Ubuntu Bionic support
+  * Bump version, update changelog
+
+ -- Nick Douma <n.douma@nekoconeko.nl>  Wed, 21 Nov 2018 12:20:17 +0100
+
 chaos (0.2.4) RELEASE; urgency=medium
 
   Update build metadata and add Ubuntu Xenial support.
